Wed Dec 13 12:59:49 2000  Darrell Brunsch <brunsch@uci.edu>

        * bin/PerlACE/Process_Unix.pm:

          Fixed PerlACE::Process on Unix to have the same interface as
          the Win32 version.

Tue Dec 12 09:52:00 2000  Douglas C. Schmidt  <schmidt@ace.cs.wustl.edu>

        * Well, it looks like we finally have a new president in the
          US, yow!

Tue Dec 12 04:53:17 2000  Douglas C. Schmidt  <schmidt@ace.cs.wustl.edu>

        * ace/Service_Config.{h,i}: Added an inequality operator.
          Thanks to Mike Curtis <mccurry@my-deja.com> for pointing this
          out.

        * ace/Service_Config.cpp (process_commandline_directives): Changed
          a check for error values being -1 to being != 0 since process_directive()
          can return

          1) a positive number of parse errors
          2) and -1 on a certain ACE_NEW_RETURN call
          3) but always zero on success.

          Thanks to Mike Curtis <mccurry@my-deja.com> and
          Munagala Ramanath <Munagala.Ramanath@PostX.com>
          for pointing this out.

Tue Dec 12 01:07:39 2000  Darrell Brunsch <brunsch@uci.edu>

        * ace/Log_Msg.cpp:

          Changed a comment to remove a false warning by fuzz.

Mon Dec 11 15:10:00 2000  Carlos O'Ryan  <coryan@uci.edu>

        * ace/Get_Opt.h:
          In some platforms 'optind', 'optarg' and 'opterr' are defined as
          macros, undefine them because we use the same identifiers as
          variable names.

        * ace/OS.h:
          If 'timezone' is defined as a macro in the system header files
          then define ACE_TIMEZONE and #undef timezone.
          The ACE_OS::timezone() method cannot be compiled otherwise, but
          unfortunately this forces us to disable support for the method
          under that sort of platform.

        * ace/OS.h:
          Do not include sys/shm.h if ACE_LACKS_SYSV_SHMEM is defined,
          there is no reason to #include the file if we are not using it
          anyway.
